[package]
name = "juicebox-sdk-software-realm"
version = "0.1.0"
authors = ["Nora Trapp <nora@juicebox.me>"]
edition = "2021"

[dependencies]
hex = { workspace = true }
juicebox-sdk-core = { path = "../core" }
juicebox-sdk-process-group = { path = "../process_group" }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
