[package]
name = "juicebox-sdk-software-realm"
version.workspace = true
license.workspace = true
authors = ["Nora Trapp <nora@juicebox.me>"]
edition = "2021"

[dependencies]
hex = { workspace = true }
juicebox-sdk-core = { workspace = true }
juicebox-sdk-process-group = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
