[package]
name = "juicebox-sdk-tokens"
version.workspace = true
license.workspace = true
authors = ["Nora Trapp <nora@juicebox.me>"]
edition = "2021"

[[bin]]
name = "tokens"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
hex = { workspace = true, features = ["std"] }
jsonwebtoken = { workspace = true }
juicebox-sdk-core = { workspace = true }
juicebox-sdk-realm-auth = { workspace = true }
thiserror = { workspace = true }
